--- a/.gitmodules
+++ b/.gitmodules
@@ -7,10 +7,10 @@
 [submodule "rails/rails_sample_app"]
 	path = rails/rails_sample_app
 	url = https://github.com/ParamagicDev/rails_sample_app.git
-[submodule "rails/sinatra_mind"]
+[submodule "rails/sinatra/sinatra_mind"]
 	path = rails/sinatra_mind
 	url = https://github.com/ParamagicDev/sinatra_mind.git
-[submodule "rails/web_guesser"]
+[submodule "rails/sinatra/web_guesser"]
 	path = rails/web_guesser
 	url = https://github.com/ParamagicDev/web_guesser.git
 [submodule "rails/clubhouse"]
